Estilo a la sección login

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <!-- Morris -->
     <!-- <link rel="stylesheet" href=""> -->
     <!-- my style -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="h-100 login">
     <div class="container h-100">
@@ -41,10 +41,10 @@
                 </div>
                 <input type="submit" class="mt-4 btn btn-primary" value="Iniciar Sección">
               </form>
-          </div>
-        </div>
-      </div>
-    </div>
+          </div><!--.contenido-->
+        </div><!--.col-md-7-->
+      </div><!--.row-->
+    </div><!--.container-->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.3.1.slim.min.js"></script>
