Creando la barra superior

--- a/cliente.html
+++ b/cliente.html
@@ -15,10 +15,37 @@
     <!-- Morris -->
     <!-- <link rel="stylesheet" href=""> -->
     <!-- my style -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-      
+      <nav class="navbar bd-navbar navbar-expand-lg navbar-dark bg-primary">
+        <a href="#" class="navbar-brand">Administracion de Libreria</a>
+
+
+        <button   class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegacion" >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="navbar-collapse collapse" id="navegacion">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <form action="#" class="my-2 my-lg-0">
+                  <input type="search" class="form-control" placeholder="Buscar...." >
+                </form>
+               </div><!--.col-->
+               <div class="col-ms-2 text-right">
+                  <a href="#" class="btn btn-success px-5 text-light my-2 my-lg-0">Perfil</a>
+               </div>
+             </div>
+            </div>
+          </div>
+      </nav>
+
+
+
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.3.1.slim.min.js"></script>
