--- a/cliente.html
+++ b/cliente.html
@@ -40,7 +40,26 @@
             </div>
           </div>
       </nav>
-
+      <!-- Barra lateral -->
+      <aside class="bg-dark p-4">
+        <h3 class="text-light text-center">
+          Navegación
+        </h3>
+        <ul class="nav flex-column mt-5">
+          <li class="nav-item">
+            <a href="#" class="nav-link text-light d-flex algin-items-center">Clientes</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link text-light d-flex algin-items-center">Ventas</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link text-light d-flex algin-items-center">Inventario</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link text-light d-flex algin-items-center">Vendedores</a>
+          </li>
+        </ul>
+      </aside>
 
 
 
