--- a/cliente.html
+++ b/cliente.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- font_awesome -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/material-icons.css">
     <!-- font -->
     <link rel="stylesheet" href="css/fonts.css">
     <!-- Morris -->
@@ -47,20 +47,43 @@
         </h3>
         <ul class="nav flex-column mt-5">
           <li class="nav-item">
-            <a href="#" class="nav-link text-light d-flex algin-items-center">Clientes</a>
+            <a href="#" class="nav-link text-light d-flex algin-items-center">
+                <i class="material-icons mr-2">contacts</i>
+              Clientes
+            </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-light d-flex algin-items-center">Ventas</a>
+            <a href="#" class="nav-link text-light d-flex algin-items-center">
+                <i class="material-icons mr-2">attach_money</i>
+              Ventas
+            </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-light d-flex algin-items-center">Inventario</a>
+            <a href="#" class="nav-link text-light d-flex algin-items-center">
+              <i class="material-icons mr-2">dvr</i>
+              Inventario
+            </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-light d-flex algin-items-center">Vendedores</a>
+            <a href="#" class="nav-link text-light d-flex algin-items-center">
+              <i class="material-icons mr-2">account_box</i>
+              Vendedores
+            </a>
           </li>
         </ul>
       </aside>
-
+<!-- Principal -->
+<main class="pt-4">
+  <div class="container">
+    <h2 class="text-center mb-4">Administración de Clientes</h2>
+  <div class="row text-center justify-content-center align-middel">
+    <div class="col-lg-3 col-md-6 col-12">
+      <div class="botton bg-success d-flex align-items-center justify-content-center p-3"><a href="nuevo-cliente.html" class="text-light"><i class="material-icons">add</i>
+        <p>Nuevo</p></a></div>
+    </div>
+  </div>
+  </div>
+</main>
 
 
 
