Modificando los vinculos y finalizando el proyecto

--- a/nuevo-cliente.html
+++ b/nuevo-cliente.html
@@ -19,59 +19,59 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-      <nav class="navbar bd-navbar navbar-expand-lg navbar-dark bg-primary  ">
-          <a href="#" class="navbar-brand">Administracion de Libreria</a>
+    <nav class="navbar bd-navbar navbar-expand-lg navbar-dark bg-primary  ">
+      <a href="cliente.html" class="navbar-brand">Administracion de Libreria</a>
 
-          <button   class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegacion" >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="navbar-collapse collapse" id="navegacion">
-            <div class="container">
-              <div class="row">
-                <div class="col">
-                  <form action="#" class="my-2 my-lg-0">
-                    <input type="search" class="form-control" placeholder="Buscar...." >
-                  </form>
-                 </div><!--.col-->
-                 <div class="col-ms-2 text-right">
-                    <a href="#" class="btn btn-success px-5 text-light my-2 my-lg-0">Perfil</a>
-                 </div>
-               </div>
-              </div>
-            </div>
-        </nav>
-        <!-- Barra lateral -->
-        <aside class="bg-dark p-4">
-          <h3 class="text-light text-center">
-            Navegación
-          </h3>
-          <ul class="nav flex-column mt-5">
-            <li class="nav-item">
-              <a href="#" class="nav-link text-light d-flex algin-items-center">
-                  <i class="material-icons mr-2">contacts</i>
-                Clientes
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-light d-flex algin-items-center">
-                  <i class="material-icons mr-2">attach_money</i>
-                Ventas
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-light d-flex algin-items-center">
-                <i class="material-icons mr-2">dvr</i>
-                Inventario
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-light d-flex algin-items-center">
-                <i class="material-icons mr-2">account_box</i>
-                Vendedores
-              </a>
-            </li>
-          </ul>
-        </aside>
+      <button   class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegacion" >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="navbar-collapse collapse" id="navegacion">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <form action="#" class="my-2 my-lg-0">
+                <input type="search" class="form-control" placeholder="Buscar...." >
+              </form>
+             </div><!--.col-->
+             <div class="col-ms-2 text-right">
+                <a href="#" class="btn btn-success px-5 text-light my-2 my-lg-0">Perfil</a>
+             </div>
+           </div>
+          </div>
+        </div>
+    </nav>
+    <!-- Barra lateral -->
+    <aside class="bg-dark p-4">
+      <h3 class="text-light text-center">
+        Navegación
+      </h3>
+      <ul class="nav flex-column mt-5">
+        <li class="nav-item">
+          <a href="#" class="nav-link text-light d-flex algin-items-center">
+              <i class="material-icons mr-2">contacts</i>
+            Clientes
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="ventas.html" class="nav-link text-light d-flex algin-items-center">
+              <i class="material-icons mr-2">attach_money</i>
+            Ventas
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-light d-flex algin-items-center">
+            <i class="material-icons mr-2">dvr</i>
+            Inventario
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-light d-flex algin-items-center">
+            <i class="material-icons mr-2">account_box</i>
+            Vendedores
+          </a>
+        </li>
+      </ul>
+    </aside>
   <!-- Principal -->
   <main class="pt-4">
     <div class="container">
