--- a/ventas.html
+++ b/ventas.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar bd-navbar navbar-expand-lg navbar-dark bg-primary  ">
-        <a href="#" class="navbar-brand">Administracion de Libreria</a>
+        <a href="cliente.html" class="navbar-brand">Administracion de Libreria</a>
 
         <button   class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegacion" >
           <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-light d-flex algin-items-center">
+            <a href="ventas.html" class="nav-link text-light d-flex algin-items-center">
                 <i class="material-icons mr-2">attach_money</i>
               Ventas
             </a>
